tests/fixtures/positive/release-engineering/test-fixture-accessed-from-production/app/src/main/kotlin/com/example/prod/Prod.kt
package com.example.prod

import com.example.fixtures.FakeUser

class Prod {
    val user: FakeUser = FakeUser()
    val users: List<FakeUser> = listOf(FakeUser.sample())
}

